<resources>

    <string name="app_name">InstantaneousBeiAPP</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="salary">工资</string>
    <string name="job">兼职</string>
    <string name="redpacket">红包</string>
    <string name="alimony">生活费</string>
    <string name="pin">零花钱</string>
    <string name="investment">投资</string>
    <string name="bonus">奖金</string>
    <string name="apply">报销</string>
    <string name="cash">现金</string>
    <string name="refund">退款</string>
    <string name="alipay">支付宝</string>
    <string name="rest">其他</string>
    <string name="compile">编辑</string>
    <string name="chooseaccount">选择账户</string>
    <string name="guide_button_text">立即登录</string>
    <string name="wallet_type_money">现金</string>
    <string name="wallet_account_type">选择账户类型</string>
    <string name="wallet_type_subsistence">储蓄卡</string>
    <string name="wallet_type_dc">信用卡</string>
    <string name="wallet_type_invest_user">投资账户</string>
    <string name="wallet_type_currency">货币资金</string>
    <string name="wallet_type_entity">实物储值卡</string>
    <string name="wallet_type_mesh_user">网络充值账户</string>
    <string name="wallet_type_housing">住房公积金</string>
    <string name="wallet_type_invest_user_conteng">(资金账户、证券账户等)</string>
    <string name="wallet_type_entity_content">(购物卡、公交卡等)</string>
    <string name="wallet_type_mesh_user_content">(支付宝、微信钱包等)</string>
    <string name="wallet_select_colour">选择颜色</string>
    <string name="app_name1">瞬贝</string>
    <string name="empty"></string>
    <string name="guide_1_text">想知道自己\n具体收入和支出是多少</string>
    <string name="guide_2_text">钱花在哪些地方\n\t\t\t\t\t\t\t\t能够盈余多少钱</string>
    <string name="guide_3_text">为买房、买车\n\t\t\t\t\t\t\t\t未来跳槽做好准备</string>
    <string name="guide_loge_text">任\t何\t时\t间\t\t都\t是\t起\t点</string>
    <string name="use_signature">任何时间都是起点</string>
    <string name="guide_center_text">就\n要\n从\n记\n账\n开\n始\n！</string>
    <string name="wallet_remind_Title_btn">记账提醒</string>
    <string name="wallet_change_Title_btn">更改账户</string>
    <string name="wallet_oval_loge">账户余额\n580.00</string>
    <string name="wallet_cash_text">现金\n现金余额</string>
    <string name="wallet_deposit_card_text">储蓄卡</string>
    <string name="wallet_deposit_card_text_balance">储蓄卡余额</string>
    <string name="wallet_blue_card_text">信用卡\n信用卡余额</string>
    <string name="wallet_alipay_text">支付宝\n支付宝余额</string>
    <string name="wallet_add_text">+添加账户</string>
    <string name="wallet_deposit_card">储蓄卡</string>
    <string name="wallet_blue_card">信用卡</string>
    <string name="wallet_alipay">支付宝</string>
    <string name="wallet_nowrite">未填写</string>
    <string name="wallet_change_account_name">账户名称</string>
    <string name="wallet_change_account_sum">账户余额</string>
    <string name="wallet_change_account_style">账户类型</string>
    <string name="wallet_change_account_explain">备注说明</string>
    <string name="wallet_change_color">选择颜色</string>
    <string name="outflow">流出</string>
    <string name="intoflow">流入</string>
    <string name="with_respect_insranraneoous">关于瞬贝</string>
    <string name="design_introduce">瞬贝记账APP是重庆隔壁工作室设计开发</string>
    <string name="designer">设计人员：王攀、蒋松、陈珊、尹梽旭</string>
    <string name="developer">开发人员：王鹏、冉娱鑫、蒲祖辉</string>
    <string name="design_permission">隔壁工作室许可及服务协议</string>
    <string name="design_copyrighr">Copyright @ 2016.隔壁工作室 版权所有</string>
    <string name="menu_remind_charge_accout">记账提醒</string>
    <string name="menu_remind_character">目前还没有提醒</string>
    <string name="menu_on">开</string>
    <string name="menu_off">关</string>
    <string name="menu_add_renind">添加提醒</string>
    <string name="menu_compile_name">编辑</string>
    <string name="menu_delete">删除</string>
    <string name="menu_adjust_time">调整时间</string>
    <string name="repetition">重复</string>
    <string name="one_character">一</string>
    <string name="two_character">二</string>
    <string name="three_character">三</string>
    <string name="four_character">四</string>
    <string name="five_character">五</string>
    <string name="six_character">六</string>
    <string name="day_character">日</string>
    <string name="menu_alarm_clock">闹钟名</string>
    <string name="menu_default">默认</string>
    <string name="menu_task_show">通知任务栏显示</string>
    <string name="menu_tel_shake">手机震动提醒</string>
    <string name="menu_remind_way">提醒方式</string>
    <string name="save">保存</string>
    <string name="guide_laugh_text">2016年9月22日，星期四\n我们相遇了</string>
    <string name="guide_transition_text">懂瞬贝，会生活</string>
    <string name="guide_versions_text">懂瞬记账V3.1.0</string>
    <string name="guide_transition2_firsttext">HI， 亲爱的</string>
    <string name="guide_transition2_twotext">梦别星辰，脚踏实地</string>
    <string name="choice_time">选择时间</string>
    <string name="positive">确定</string>
    <string name="negative">否定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="begintime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="statement">报表</string>
    <string name="total_expenditure">总支出</string>
    <string name="total">总计</string>
    <string name="clothes">服饰</string>
    <string name="eating_and_drinking">饮食</string>
    <string name="detail">明细</string>
    <string name="wallet">钱包</string>
    <string name="statistical">报表</string>
    <string name="more">更多</string>
    <string name="menu_use_accout">用户资料</string>
    <string name="nickname">昵称</string>
    <string name="signature">签名</string>
    <string name="birthday">生日</string>
    <string name="phone">手机</string>
    <string name="unbound">未绑定</string>
    <string name="saveing">保存</string>
    <string name="set">设置</string>
    <string name="phonenumb">手机号码</string>
    <string name="onbound">已绑定</string>
    <string name="gestures_password">手势密码</string>
    <string name="unset">未设置</string>
    <string name="about_the_instantaneous_bei">关于瞬贝</string>
    <string name="check_in_time">签到</string>
    <string name="bill_renind">记账提醒</string>
    <string name="voice_of_account">语音记账</string>
    <string name="exit_account">退出当前账号</string>
    <string name="create_gestures_password">创建手势密码</string>
    <string name="gestures_password_text">创建一个手势密码，这样在不知道您的密码情况下不能打开瞬贝</string>
    <string name="suggestion">意见反馈</string>
    <string name="putinto">提交</string>
    <string name="datail">明细</string>
    <string name="datail_calendar_time">2016年10月</string>
    <string name="datail_not_tally">无记账记录</string>
    <string name="datail_have_tally">有记账记录</string>
    <string name="datail_add_trait">点击加号记一笔</string>
    <string name="detail_income">本月收入</string>
    <string name="detail_budget">本月预算</string>
    <string name="detail_expend">本月支出</string>
    <string name="expend">支出</string>
    <string name="today">今天</string>
    <string name="derive">数据导出</string>
    <string name="send">发送</string>
    <string name="default_books">默认账本</string>
    <string name="deadline">期限</string>
    <string name="all_time">所有时间</string>
    <string name="send_file">发送导出文件到：</string>
    <string name="e_mail_address">请输入邮箱地址</string>
    <string name="change_deadline">选择期限</string>
    <string name="begin_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="this_month">本月</string>
    <string name="last_month">上个月</string>
    <string name="this_year">今年</string>
   <string name="custom_period">自定义周期</string>

    <string-array name="month">
        <item>January</item>
        <item>Februar</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
