<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/blue_cyan">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@mipmap/ico_aleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/with_respect_insranraneoous"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
    <!--标记-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:drawablePadding="15dp"
        android:drawableTop="@mipmap/icon_insranraneous_with_respect"
        android:gravity="center_horizontal"
        android:text="@string/app_name1"
        android:textColor="@color/gery"
        android:textSize="40sp" />
    <!--介绍-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/design_introduce"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textColor="@color/gery"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/designer"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textColor="@color/gery"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/developer"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textColor="@color/gery"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_above="@+id/design_copyrighr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/design_permission"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:textSize="12sp"
        android:textColor="@color/gery"/>
    <TextView
        android:id="@+id/design_copyrighr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/design_copyrighr"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="12sp"
        android:textColor="@color/gery"
        android:layout_marginBottom="8dp"/>
    </RelativeLayout>

</LinearLayout>