<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:textSize="20sp"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/guide_4_img"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guide_loge_text"
            android:textSize="18sp"
            android:textColor="@color/grey"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/guide_center_text"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/guide_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/guide_button_text"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@mipmap/guide_button"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>
