<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <!--标题-->
    <RelativeLayout
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_cyan">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:padding="10dp"
            android:src="@mipmap/ico_aleft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </RelativeLayout>
    <!--瞬贝-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="26dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_rabbit_off"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_name1"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_word"
            android:textSize="25sp"/>
    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gery"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"/>
    <!--手机号码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phonenumb"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/onbound"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_word"
            android:textSize="25sp"/>
    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gery"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />
    <!--手势密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/gestures_password"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/unset"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_word"
            android:textSize="25sp"/>
    </LinearLayout>
    <!--分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gery"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />
    <!--关于瞬贝-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/about_the_instantaneous_bei"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/grey"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_word"
            android:textSize="25sp"/>
    </LinearLayout>

</LinearLayout>



