<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <!--明细标题栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">
        <ImageView
            android:id="@+id/return_btton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_detail_return"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datail_calendar_time"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/add_btton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_detail_more"
            android:layout_alignParentRight="true"
            android:padding="12dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <!--日历/逻辑完全不知道怎么做-->
    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </DatePicker>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_detail_morn"
        android:background="@mipmap/icon_detail_circle"
        android:padding="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"/>
    <!--有无记账记录-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2016"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datail_not_tally"
            android:textSize="20sp"
            android:textColor="@color/black_gery_white"/>
    </LinearLayout>
    <!--添加记账-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/datail_add_trait"
        android:textSize="23sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/green"/>
</LinearLayout>