<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <!--标题-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:layout_centerInParent="true"
            android:textSize="15sp"
            android:textColor="@color/black_size"/>
        <TextView
            android:id="@+id/confm_btton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gery"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </DatePicker>

</LinearLayout>